# nsjail-python

./: .gitignore  .gitmodules  .readthedocs.yaml  LICENSE  README.md  conftest.py  pyproject.toml
.github/workflows/: build-binaries.yml  ci.yml  publish-bin-build.yml  publish-bin-none.yml  publish-companions.yml  publish.yml
_codegen/: cli_flags.py  generate.py
docs/: api.rst  conf.py  index.rst  quickstart.rst
docs/plans/: explore-nsjail-python-wrapper.md
docs/superpowers/plans/: 2026-03-29-nsjail-python-implementation.md  2026-03-29-v01x-enhancements.md  2026-03-30-binary-distribution.md  2026-03-30-integration-tests.md  2026-03-30-seccomp-cgroup.md  2026-03-31-jailed-execution.md  2026-03-31-mount-helpers.md
docs/superpowers/specs/: 2026-03-29-nsjail-python-design.md  2026-03-29-v01x-enhancements-design.md  2026-03-30-binary-distribution-design.md  2026-03-30-integration-tests-design.md  2026-03-30-seccomp-cgroup-design.md  2026-03-31-jailed-execution-design.md  2026-03-31-mount-helpers-design.md  2026-04-01-cli-tool-design.md
src/nsjail/: __init__.py  _field_meta.py  _worker.py  builder.py  call.py  cgroup.py  config.py  enums.py  exceptions.py  mounts.py  presets.py  runner.py  seccomp.py
src/nsjail/_proto/: __init__.py  config_pb2.py
src/nsjail/serializers/: __init__.py  cli.py  protobuf.py  textproto.py
tests/: test_builder.py  test_call.py  test_cgroup.py  test_cli_serializer.py  test_codegen.py  test_config.py  test_enums.py  test_exceptions.py  test_field_meta.py  test_integration.py  test_mounts.py  test_negative.py  test_presets.py  test_protobuf_serializer.py  test_public_api.py  test_runner.py  test_seccomp.py  test_serializers.py  test_worker.py
tests/integration/: conftest.py  test_execution.py  test_isolation.py  test_pipeline.py
