[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nsjail-python"
version = "0.1.0"
description = "Python wrapper for Google's nsjail sandboxing tool"
requires-python = ">=3.12"
license = "MIT"
dependencies = []

[project.optional-dependencies]
proto = ["protobuf>=4.0"]
dev = [
    "grpcio-tools",
    "pytest",
    "protobuf>=4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/nsjail"]

[tool.pytest.ini_options]
testpaths = ["tests"]
